@@ -1,5 +1,9 @@
 2013-04-22  Corinna Vinschen  <corinna@vinschen.de>
 
+	* include/sys/queue.h: Delete in favor of more complete newlib file.
+
+2013-04-22  Corinna Vinschen  <corinna@vinschen.de>
+
 	Adapt to changes in newlib's sys/cdefs.h:
 	* include/sys/sysinfo.h (struct sysinfo): Rename __unused member to __f.
 	* libc/fts.c (__FBSDID): Drop definition.
